src/test/resources/frontendReference/invalid/semanticErr/while/whileIntCondition.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:8 -- Incompatible type at 15+6 (expected: BOOL, actual: INT)
